interface for body sections

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.Gods_n_Monsters-src=src
 file.reference.jogl-all-natives-windows-amd64.jar=lib\\jogl-all-natives-windows-amd64.jar
 file.reference.jogl-all.jar=lib\\jogl-all.jar
 file.reference.KinectPV2.jar=lib\\KinectPV2.jar
+file.reference.physics.jar=lib\\physics.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.gluegen-rt-natives-windows-amd64.jar}:\
     ${file.reference.gluegen-rt.jar}:\
     ${file.reference.jogl-all-natives-windows-amd64.jar}:\
-    ${file.reference.jogl-all.jar}
+    ${file.reference.jogl-all.jar}:\
+    ${file.reference.physics.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
